fix follower, following, suggested to not cut off bottom user

--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{ 'tab.suggested.who' | translate }}">
-    <ion-content>
+    <ion-content class="tatami-header tatami-footer">
         <ion-refresher on-refresh="vm.getNewSuggested()"></ion-refresher>
         <ion-list>
             <div ng-repeat="user in vm.suggested">
