--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{ 'tab.follower' | translate }}">
-    <ion-content>
+    <ion-content class="tatami-header tatami-footer">
         <ion-refresher on-refresh="vm.getNewFollowers()"></ion-refresher>
         <ion-list>
             <div ng-repeat="user in vm.followers">
