--- a/mobile/www/app/components/follow/following/following.html
+++ b/mobile/www/app/components/follow/following/following.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{ 'tab.following' | translate }}">
-    <ion-content>
+    <ion-content class="tatami-header tatami-footer">
         <ion-refresher on-refresh="vm.getNewFollowing()"></ion-refresher>
         <ion-list>
             <div ng-repeat="user in vm.following">
