--- a/mobile/www/app/components/login/server/server.html
+++ b/mobile/www/app/components/login/server/server.html
@@ -1,5 +1,5 @@
 <ion-view view-title="">
-    <ion-content>
+    <ion-content ng-style="{'background-color':'#f5f5f5'}">
         <ion-list>
             <ion-item class="item-divider item-button-right" translate="server.endpoint.change"></ion-item>
             <ion-item class="item-input-inset">
@@ -26,7 +26,6 @@
             <ion-item ng-click="vm.useDefaultEndpoint()"
                       class="text-center"
                       translate="server.endpoint.default"></ion-item>
-            <ion-item class="item-divider"></ion-item>
         </ion-list>
     </ion-content>
 </ion-view>
