--- a/mobile/www/app/components/home/favorites/favorites.html
+++ b/mobile/www/app/components/home/favorites/favorites.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{ 'tab.favorites' | translate }}">
+<ion-view view-title="{{ 'tab.favorites' | translate }}" ng-style="{'background-color':'#f5f5f5'}">
     <tatami-status-list statuses="vm.favorites"
                         current-user="vm.currentUser"
                         tatami-refresher="vm.getNewStatuses()"
