--- a/mobile/www/app/components/home/mentions/mentions.html
+++ b/mobile/www/app/components/home/mentions/mentions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{ 'tab.mentions' | translate }}">
+<ion-view view-title="{{ 'tab.mentions' | translate }}" ng-style="{'background-color':'#f5f5f5'}">
     <tatami-status-list statuses="vm.mentioned"
                         current-user="vm.currentUser"
                         tatami-refresher="vm.getNewStatuses()"
