--- a/mobile/www/app/components/home/more/all_users/all.users.html
+++ b/mobile/www/app/components/home/more/all_users/all.users.html
@@ -1,6 +1,6 @@
-<ion-view view-title="{{ 'more.allusers' | translate }}">
-    <ion-content class="tatami-header tatami-footer">
-        <ion-list ng-init="vm.refreshUsers()">
+<ion-view view-title="{{ 'more.allUsers' | translate }}">
+    <ion-content class="tatami-header tatami-footer" ng-style="{'background-color':'#f5f5f5'}">
+        <ion-list ng-init="vm.getAllUsers()">
             <div ng-repeat="user in vm.users">
                 <tatami-user user="user" current-user="vm.currentUser"></tatami-user>
             </div>
