--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,30 +1,26 @@
 <ion-view view-title="{{ 'tab.more' | translate }}">
-    <ion-content class="tatami-header tatami-footer">
+    <ion-content class="tatami-header tatami-footer" ng-style="{'background-color':'#f5f5f5'}">
         <ion-list>
             <div>
                 <tatami-user user="vm.currentUser" current-user="vm.currentUser"></tatami-user>
             </div>
-            <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.goToCompanyTimeline()" class="text-center">
                 <span class="ion-briefcase calm padding-right"></span>&nbsp;
                 <span class="calm" translate="more.company">Company Timeline</span>
             </ion-item>
-            <ion-item class="item-divider"></ion-item>
             <ion-item class="text-center" ng-click="vm.goToAllUsers()">
                 <span class="ion-earth padding-right"></span>
-                <span translate="more.allusers">All users</span>
+                <span translate="more.allUsers">All users</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.goToSettings()" class="text-center">
                 <span class="ion-gear-a padding-right"></span>&nbsp;
                 <span translate="more.settings">Settings</span>
             </ion-item>
-            <ion-item class="item-divider"></ion-item>
             <ion-item class="text-center" ng-click="vm.goToBlockedUsers()">
                 <span class="ion-close-circled padding-right"></span>
-                <span translate="more.blockedusers.manage">Manage your blocked users</span>
+                <span translate="more.blockedUsers.title">Manage your blocked users</span>
             </ion-item>
-            <ion-item ng-if="vm.currentUser.isAdmin" class="item-divider"></ion-item>
             <ion-item ng-if="vm.currentUser.isAdmin" class="text-center" ng-click="vm.goToReportedStatus()">
                 <span class="ion-alert-circled"></span>
                 <span translate="more.reportedStatus.title">Reported Statuses</span>
