Modified ToS slightly

--- a/web/src/main/webapp/app/components/about/tos/ToSView.html
+++ b/web/src/main/webapp/app/components/about/tos/ToSView.html
@@ -33,6 +33,8 @@
         <li>You agree that you will not engage in any activity that interferes with or disrupts the Services (or the servers and networks which are connected to the Services).</li>
         <li>You agree that you will not reproduce, duplicate, copy, sell, trade or resell the Services for any purpose without the express written permission by Ippon.</li>
         <li>You agree that you are solely responsible for (and that Ippon has no responsibility to you or to any third party for) any breach of your obligations under the Terms of Service and for the consequences (including any loss or damage which Ippon may suffer) of any such breach.</li>
+        <li>You agree that you, as the admin of a domain, claim full responsibility and liability for management of objectionable content, both by proactively searching for and screening incoming content and by responding to reports of objectionable content within 24 hours of content having been reported.</li>
+        <li>You agree that you, as an individual registering or using a domain to access an endpoint for which an endpoint was not originally created, claim full liability and responsibility for proactively making certain an admin is assigned to management of content posted by users under your domain.</li>
         <li>Ippon reserves the right (but has no obligation) to pre-screen, review, flag, filter, modify, refuse or remove any or all content or account from any of the Services at Ippon's sole discretion. You understand that by using the Services you may be exposed to content that you may find offensive, indecent or objectionable and that, in this respect, you use the Services at your own risk.</li>
     </ol>
     <h2>4 - Advertisements</h2>
