add page for admins to view reported statuses

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -244,6 +244,12 @@
                             </a>
                         </li>
                         <li>
+                            <a ui-sref="reported-statuses">
+                                <span class="glyphicon glyphicon-exclamation-sign"></span>
+                                <span translate="global.menu.admin.reported-statuses">Reported Statuses</span>
+                            </a>
+                        </li>
+                        <li>
                             <a ui-sref="metrics">
                                 <span class="glyphicon glyphicon-dashboard"></span>
                                 <span translate="global.menu.admin.metrics">Metrics</span>
