--- a/src/main/webapp/assets/styles/tatami.css
+++ b/src/main/webapp/assets/styles/tatami.css
@@ -95,7 +95,7 @@ h3 {
 }
 
 body {
-    background-image: url(img/wallpaper.jpg);
+    background-image: url(../img/wallpaper.jpg);
 }
 
 h4 {
@@ -398,37 +398,37 @@ div.jGrowl-notification{
 }
 
 .tatam.favorite {
-    background-image: url(img/favorite.png);
+    background-image: url(../img/favorite.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .favorite {
-    background-image: url(img/favorite.png);
+    background-image: url(../img/favorite.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .tatam.share {
-    background-image: url(img/shared.png);
+    background-image: url(../img/shared.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .share {
-    background-image: url(img/shared.png);
+    background-image: url(../img/shared.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .tatam.both {
-    background-image: url(img/both.png);
+    background-image: url(../img/both.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .both {
-    background-image: url(img/both.png);
+    background-image: url(../img/both.png);
     background-repeat: no-repeat;
     background-position: right top;
 }
@@ -629,7 +629,7 @@ margin-bottom: 20px;
 
 .tatams-container {
     min-height: 75px;
-    background-image: url(/assets/img/wallpaper.jpg);
+    background-image: url(../img/wallpaper.jpg);
 }
 
 .tatam-expand-container {
@@ -1085,5 +1085,5 @@ margin-bottom: 20px;
 }
 
 #content {
-    background-image: url(img/wallpaper.jpg);
+    background-image: url(../img/wallpaper.jpg);
 }
